...
            android:id="@+id/image_uri"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_image_selected_yet" />

        <Button
            android:id="@+id/takeImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/take_picture" />

        <androidx.camera.view.PreviewView
                android:id="@+id/previewView"
...
