...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".basicEntities.account.AccountFragment">

    <TextView
        android:id="@+id/titleAccountGuest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account_fragment"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
...
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleAccountGuest"
        app:layout_constraintVertical_bias="0.287" />

    <Button
        android:id="@+id/signInButtonAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
...
